Full Project upgrade
Implemented multiple fixes, improved ui and optimized the code